--- a/public/css/account-form.css
+++ b/public/css/account-form.css
@@ -1,6 +1,7 @@
 html, body {
 	height: 100%;
 }
+
 body {
 	display: flex;
 	align-items: center;
@@ -9,28 +10,30 @@ body {
 	padding-bottom: 40px;
 	background-color: #f5f5f5;
 }
+
 form {
 	width: 100%;
 	max-width: 330px;
 	padding: 15px;
 	margin: 0 auto;
 }
+
 form .form-control {
 	position: relative;
 	box-sizing: border-box;
 	height: auto;
 	padding: 10px;
 	font-size: 16px;
-}
-form .form-control:focus {
-	z-index: 2;
-}
-form input[type='text'] {
 	margin-bottom: -1px;
 	border-bottom-right-radius: 0;
 	border-bottom-left-radius: 0;
 }
-form input[type='password'] {
+
+form .form-control:focus {
+	z-index: 2;
+}
+
+form input:last-of-type {
 	margin-bottom: 10px;
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
