--- a/views/partials/register.hbs
+++ b/views/partials/register.hbs
@@ -11,8 +11,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-<script src='/js/validator.min.js'></script>
-<script src='/js/input.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/validator/10.1.0/validator.min.js'></script>
+<script src='{{{js}}}'></script>
 <script>
     $(function() {
         $('[data-toggle="tooltip"]').tooltip()
