--- a/views/partials/register.hbs
+++ b/views/partials/register.hbs
@@ -1,8 +1,8 @@
 <form action='/register' method='post'>
     <h1 class='h3 mb-3 font-weight-normal'>Create an account</h1>
-	<input type='text' class='form-control' name='username' placeholder='Username' autofocus data-toggle='tooltip' data-placement='right' title='You can change your username later. 5~20 characters long, alphanumeric only.'>
-    <input type='password' class='form-control' name='password' placeholder='Password' data-toggle='tooltip' data-placement='right' title='At least 8 characters long; max 30'>
-    <input type='email' class='form-control' name='email' placeholder='Email' data-toggle='tooltip' data-placement='right' title='A valid email address (for password reset only)'>
+	<input type='text' class='form-control' name='username' placeholder='Username' data-toggle='tooltip' data-placement='right' title='You can change your username later. 5~20 characters long, alphanumeric only.' autofocus required>
+    <input type='password' class='form-control' name='password' placeholder='Password' data-toggle='tooltip' data-placement='right' title='At least 8 characters long; max 30' required>
+    <input type='email' class='form-control' name='email' placeholder='Email' data-toggle='tooltip' data-placement='right' title='A valid email address (for password reset only)' required>
     <button type='submit' class='btn btn-lg btn-primary btn-block'>Register</button>
     <p class='mt-4'>
         <a class='text-muted' href='/login'>Already have an account? Login!</a>
