--- a/views/template.hbs
+++ b/views/template.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>{{{auto title body}}}</title>
+	<title>{{auto title body}}</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,6 +9,6 @@
 	<link rel='stylesheet' href='{{{css}}}'>
 </head>
 <body class='{{{bodyClass}}}'>
-	{{>(lookup . 'body') js=js}}
+	{{> (lookup . 'body') js=js}}
 </body>
 </html>
