--- a/views/partials/error.hbs
+++ b/views/partials/error.hbs
@@ -2,4 +2,5 @@
 <div class='container text-center error'>
 	<h1>{{message}}<br><a href="/">Back to home</a></h1>
 </div>
+{{>base_scripts}}
 {{>base_footer error=error}}
