--- a/views/partials/base-footer.hbs
+++ b/views/partials/base-footer.hbs
@@ -1,6 +1,6 @@
 <script>
 	$(function() {
-		if ('{{error}}') swal('{{error}}')
+		if ('{{error}}') swal({text: '{{error}}', icon: 'error'})
 	})
 </script>
 </body>
