--- a/views/partials/form-scripts.hbs
+++ b/views/partials/form-scripts.hbs
@@ -1,4 +1,4 @@
 {{>base_scripts}}
 <script src='https://cdnjs.cloudflare.com/ajax/libs/validator/10.1.0/validator.min.js'></script>
-<script src='/js/validate-user.js'></script>
-<script src='/js/user-form.js'></script>
+<script src='/js/check.js'></script>
+<script src='/js/form.js'></script>
