--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
 {{>base_header title='Login' css='/css/user-form.css'}}
 {{>form_header action='login' text='Login'}}
-	<input type='email' class='form-control' name='email' placeholder='Email' autofocus required>
+	<input class='form-control' name='email' placeholder='Email' autofocus required>
 	<input type='password' class='form-control' name='password' placeholder='Password' required>
 	{{>button_submit text='Sign in'}}
 {{>form_footer href='register' text="Don't have an account? Register!"}}
