--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,6 +1,6 @@
 {{>base_header title='Register' css='/css/user-form.css'}}
 {{>form_header action='register' text='Create an account'}}
-	<input type='email' class='form-control' name='email' placeholder='Email' data-toggle='tooltip' data-placement='right' title='Valid email address (used for password reset)' autofocus required>
+	<input class='form-control' name='email' placeholder='Email' data-toggle='tooltip' data-placement='right' title='Valid email address (used for password reset)' autofocus required>
 	<input type='password' class='form-control' name='password' placeholder='Password' data-toggle='tooltip' data-placement='right' title='At least 9 characters long; max 30' required>
 	{{>button_submit text='Register'}}
 {{>form_footer href='login' text='Already have an account? Login!'}}
